# schipol_airport

./: constantes.py  extract.py  main.py  pyproject.toml  save.py  transform.py
data/: aircraft_types.csv  airlines.csv  destinations.csv
