[project]
name = "schiphol-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "ipdb>=0.13.13",
    "pandas>=3.0.1",
    "python-dotenv[cli]>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
]
